editor-components/e-commerce/e-commerce8/e-commerce8.module.scss
@use "../../../composer-base-components/base/utitilities/viewports.module.scss" as *;

.container {
    .max-content {
        display: flex;
        gap: var(--composer-gap-md);
        flex-direction: column;

        .top-header {
            .button-container {
                float: right;
                display: flex;
                gap: var(--composer-gap-sm);
                margin-left: var(--composer-gap-md);
                margin-bottom: var(--composer-gap-xs);
                width: fit-content;
                min-width: 100px;

                .button {
                    .button-text {
                        content: ""
                    }
                }
            }

            .vertical-content {
                .subtitle {
                    margin-left: 0;
                }

                .title,
                .description {
                    text-align: left;
                }
            }
        }

        .button-container-mobile {
            display: none;
            justify-content: center;
            width: 100%;

            .button {
                width: 100%;
            }
        }

        .card-wrapper {
            gap: var(--composer-gap-lg);

            .card-container {
                display: flex;
                flex-direction: column;
                align-items: flex-start;
                justify-content: flex-start;
                gap: var(--composer-gap-sm);
                position: relative;

                .image-container {
                    width: 100%;
                    max-height: 500px;
                    aspect-ratio: 0.5;
                    overflow: hidden;
                    position: relative;
                    border-radius: var(--composer-border-radius-md);

                    &.has-hover:hover {
                        .image-wrapper {
                            .image {
                                opacity: 0;
                            }

                            .hover-image {
                                opacity: 1;
                                transform: scale(1.10);
                                transition: transform 4s ease;
                            }
                        }
                    }

                    .image-wrapper {
                        width: 100%;
                        height: 100%;
                        position: absolute;
                        inset: 0;

                        .image {
                            width: 100%;
                            height: 100%;
                            object-fit: cover;
                            object-position: center;
                            position: absolute;
                            inset: 0;
                            opacity: 1;
                        }

                        .hover-image {
                            width: 100%;
                            height: 100%;
                            object-fit: cover;
                            object-position: center;
                            position: absolute;
                            inset: 0;
                            opacity: 0;
                            transform: scale(1);
                        }
                    }

                    .badge {
                        position: absolute;
                        top: var(--composer-gap-sm);
                        left: var(--composer-gap-sm);
                        z-index: 2;

                        .badge-text {
                            color: var(--composer-font-color-secondary);
                            padding: var(--composer-gap-xs) var(--composer-gap-sm);
                            background-color: var(--composer-primary-color);
                            border-radius: var(--composer-border-radius-sm);
                        }
                    }
                }

                .text-container {
                    display: flex;
                    flex-direction: column;
                    gap: var(--composer-gap-sm);
                    color: var(--composer-font-color-primary);
                    width: 100%;

                    .line {
                        width: 100%;
                        height: 1px;
                        background-color: var(--composer-tertiary-color);
                    }

                    .product-title {
                        color: var(--composer-font-color-primary);
                        text-align: left;
                    }

                    .labels-rating-row {
                        display: flex;
                        align-items: center;
                        justify-content: space-between;
                        width: 100%;

                        .labels-container {
                            display: flex;
                            flex-direction: row;
                            flex-wrap: wrap;
                            align-items: center;
                            gap: var(--composer-gap-sm);

                            .label-item {
                                display: flex;
                                align-items: center;

                                .label-text {
                                    color: var(--composer-tertiary-color);
                                }
                            }

                            .label-separator {
                                color: var(--composer-tertiary-color);
                            }
                        }

                        .rating-container {
                            .rating-item {
                                display: flex;
                                align-items: center;
                                gap: var(--composer-gap-xs);

                                .rating-icon {
                                    font-size: 1.25rem;
                                    line-height: 0;
                                    color: var(--composer-secondary-color);
                                }

                                .rating-label {
                                    color: var(--composer-tertiary-color);
                                }
                            }
                        }
                    }

                    .price-row {
                        display: flex;
                        align-items: center;
                        gap: var(--composer-gap-xs);

                        .price {
                            display: flex;

                            .currency-symbol,
                            .value {
                                color: var(--composer-font-color-primary);
                            }
                        }

                        .price-suffix {
                            color: var(--composer-tertiary-color);
                            text-align: left;
                        }
                    }
                }
            }
        }
    }
}

@container (max-width: #{$composer-tablet-width}) {
    .container {
        .max-content {
            .card-wrapper {
                gap: var(--composer-gap-md);

                .card-container {
                    .image-container {
                        max-height: 350px;
                    }

                    .text-container {
                        .labels-rating-row {
                            .labels-container {
                                gap: var(--composer-gap-xs);
                            }
                        }
                    }
                }
            }
        }
    }
}

@container (max-width: #{$composer-phone-width}) {
    .container {
        .max-content {
            .card-wrapper {
                .card-container {
                    .image-container {
                        max-height: 250px;
                    }
                }
            }

            .button-container {
                display: none !important;
            }

            .button-container-mobile {
                display: flex;
                justify-content: center;
            }
        }
    }
}

